main/kubernetes-main-objects/ingress/service1-pod1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  labels:
    app: service1
spec:
  containers:
    - name: nginx
      image: nginx:1.14.2
      ports:
        - containerPort: 80
          name: nginx-port
