main/kubernetes-main-objects/ingress/service2-pod2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    app: service2
spec:
  containers:
    - name: tomcat
      image: tomcat:8.0.15-jre7
      ports:
        - containerPort: 8080
          name: tomcat-port
